[gd_scene load_steps=11 format=3 uid="uid://d3y8puv62ttr7"]

[ext_resource type="Texture2D" uid="uid://c4p1vsuh1whm5" path="res://_placeholder/placeholder_cassette_player.png" id="1_q7bm5"]
[ext_resource type="Script" path="res://office/cassette_player.gd" id="1_sokl1"]
[ext_resource type="AudioStream" uid="uid://dh8ial3m4pgex" path="res://audio/music/mogu_mogu_music_box.ogg" id="3_x0akr"]
[ext_resource type="AudioStream" uid="uid://c5qqd20djdfoa" path="res://audio/sound_effects/rewind_cassette_tape.ogg" id="4_3yhnr"]
[ext_resource type="AudioStream" uid="uid://6oxqei6iomis" path="res://audio/sound_effects/cassette_player_button_in.ogg" id="5_q052q"]
[ext_resource type="AudioStream" uid="uid://depp2hue76j3j" path="res://audio/sound_effects/cassette_player_button_out.ogg" id="6_2okhb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g6epe"]
size = Vector2(183, 89)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5mupd"]
size = Vector2(36, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jw11m"]
size = Vector2(36, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rautt"]
size = Vector2(36, 36)

[node name="CassettPlayer" type="Node2D"]
script = ExtResource("1_sokl1")

[node name="Texture" type="Sprite2D" parent="."]
position = Vector2(0, 1)
texture = ExtResource("1_q7bm5")

[node name="Cassette" type="Area2D" parent="Texture"]

[node name="Shape" type="CollisionShape2D" parent="Texture/Cassette"]
position = Vector2(0.5, 88.5)
shape = SubResource("RectangleShape2D_g6epe")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Rewind" type="Area2D" parent="Texture"]

[node name="Shape" type="CollisionShape2D" parent="Texture/Rewind"]
position = Vector2(-110, -35)
shape = SubResource("RectangleShape2D_5mupd")

[node name="Stop" type="Area2D" parent="Texture"]

[node name="Shape" type="CollisionShape2D" parent="Texture/Stop"]
position = Vector2(-10, -35)
shape = SubResource("RectangleShape2D_jw11m")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Play" type="Area2D" parent="Texture"]

[node name="Shape" type="CollisionShape2D" parent="Texture/Play"]
position = Vector2(90, -35)
shape = SubResource("RectangleShape2D_rautt")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="CassetteMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_x0akr")
bus = &"Music"

[node name="CassetteRewind" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_3yhnr")

[node name="CassettePlayerButtonIn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_q052q")
bus = &"Sound Effects"

[node name="CassettePlayerButtonOut" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_2okhb")
bus = &"Sound Effects"

[connection signal="mouse_entered" from="Texture/Cassette" to="." method="_on_cassette_enter"]
[connection signal="mouse_exited" from="Texture/Cassette" to="." method="_on_mouse_exit_any"]
[connection signal="mouse_entered" from="Texture/Rewind" to="." method="_on_rewind_enter"]
[connection signal="mouse_exited" from="Texture/Rewind" to="." method="_on_mouse_exit_any"]
[connection signal="mouse_entered" from="Texture/Stop" to="." method="_on_stop_enter"]
[connection signal="mouse_exited" from="Texture/Stop" to="." method="_on_mouse_exit_any"]
[connection signal="mouse_entered" from="Texture/Play" to="." method="_on_play_enter"]
[connection signal="mouse_exited" from="Texture/Play" to="." method="_on_mouse_exit_any"]
